fixed the annoying scrollbars
sorry, yeah, that was my fuckup

--- a/client/style.css
+++ b/client/style.css
@@ -22,15 +22,8 @@ body {
     
 }
 
-.infotext, .slide_handler {
-    width: 960px;
-    margin: auto;
-}
-
 .main {
-    width: 100%;
-    height: 100%;
-    /*width: 960px;*/
+    width: 960px;
     font-family: Vollkorn, Georgia, Times, 'Times New Roman', serif;
     margin: auto;
     color: #333;
